Changed name and added about page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-        <title>Simple gym logger</title>
+        <title>BarbellBook - Your personal gym logbook</title>
     </head>
     <body>
         <div id="root"></div>
