--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="app-icon.png" />
         <link rel="manifest" href="/manifest.json" />
         <title>BarbellBook - Your personal gym logbook</title>
     </head>
