--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
+
+        <script
+            data-collect-dnt="true"
+            async
+            src="https://scripts.simpleanalyticscdn.com/latest.js"
+        ></script>
     </body>
 </html>
