--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
         />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
 
         <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
         <link rel="apple-touch-icon" href="app-icon.png" />
